# new-stuff

./: .env.example  .eslintrc.cjs  .gitattributes  .gitignore  .gitmessage.txt  .prettierignore  COMPLETE_SUMMARY.txt  DIAGNOSTIC_SYSTEM_SUMMARY.md  Dockerfile  FREEZE_DIAGNOSIS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICK_START.md  README.md  README.mdgit  README_TEST_SYSTEM.md  START_HERE.md  SYSTEM_CREATED.txt  TESTING_GUIDE.txt  TEST_CHECKLIST.md  diagnose-startup.sh  index-test.html  index.html  package-lock.json  package.json  playwright.config.ts  quick-diagnose.sh  tailwind.config.js  test-startup.sh  test_startup.sh  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  check_output.txt  check_result.txt  current_errors.txt  eclipse_market.db  errors.txt  tauri.conf.json  temp_commands.txt
src-tauri-test/: Cargo.toml  tauri.conf.json
src-tauri-test/src/: main.rs
src-tauri/.cargo/: config.toml
src-tauri/benches/: price_engine_bench.rs
src-tauri/capabilities/: default.json  main.json
src-tauri/config/: cache_ttl.json
src-tauri/data/: risk_training_samples.csv
src-tauri/migrations/: 001_feature_roadmap.sql
src-tauri/src/: App.tsx  automation.rs  db.rs  index.css  integrations.rs  jupiter.rs  lib.rs  main.rs  main.tsx  realtime.rs  utils.rs  websocket_handler.rs
src-tauri/src/academy/: commands.rs  content.rs  mod.rs  progress.rs  rewards.rs
src-tauri/src/ai/: backtest_engine.rs  mod.rs  price_predictor.rs  sentiment_analyzer.rs  types.rs
src-tauri/src/ai_chat/: mod.rs
src-tauri/src/ai_legacy/: launch_predictor.rs  mod.rs
src-tauri/src/alerts/: alert_filters.rs  alert_history.rs  alert_templates.rs  mod.rs  price_alerts.rs
src-tauri/src/anomalies/: mod.rs
src-tauri/src/api/: health_commands.rs  health_monitor.rs  jupiter.rs  mod.rs  trading_execution.rs
src-tauri/src/api_analytics/: mod.rs
src-tauri/src/api_config/: mod.rs
src-tauri/src/auth/: biometric.rs  mod.rs  session_manager.rs  two_factor.rs
src-tauri/src/auto_compound/: mod.rs
src-tauri/src/auto_start/: mod.rs
src-tauri/src/backup/: cloud_providers.rs  mod.rs  scheduler.rs  service.rs  settings_manager.rs
src-tauri/src/bots/: dca_bot.rs  mod.rs
src-tauri/src/bridges/: allbridge.rs  commands.rs  mod.rs  synapse.rs  types.rs  wormhole.rs
src-tauri/src/cache_commands/: mod.rs
src-tauri/src/chains/: arbitrum.rs  base.rs  commands.rs  ethereum.rs  mod.rs  polygon.rs  solana.rs  types.rs
src-tauri/src/chart_stream/: mod.rs
src-tauri/src/collab/: commands.rs  crypto.rs  mod.rs  moderation.rs  permissions.rs  room.rs  rtc.rs  state.rs  types.rs  websocket.rs
src-tauri/src/compiler/: auto_compiler.rs  mod.rs
src-tauri/src/config/: commands.rs  mod.rs  settings_manager.rs  settings_schema.rs
src-tauri/src/core/: cache_manager.rs  mod.rs  price_engine.rs  websocket_manager.rs
src-tauri/src/data/: compression_commands.rs  database.rs  event_store.rs  mod.rs
src-tauri/src/defi/: auto_compound.rs  governance.rs  jupiter.rs  kamino.rs  lp_analyzer.rs  marginfi.rs  mod.rs  position_manager.rs  solend.rs  staking.rs  types.rs  yield_farming.rs  yield_tracker.rs
src-tauri/src/dev_tools/: commands.rs
src-tauri/src/diagnostics/: code_repair.rs  db_repair.rs  dependency_manager.rs  engine.rs  file_repair.rs  issue_detector.rs  mod.rs  network_repair.rs  performance_repair.rs  tauri_commands.rs  types.rs
src-tauri/src/drawings/: mod.rs
src-tauri/src/errors/: app_error.rs  crash_reporter.rs  mod.rs  runtime_handler.rs
src-tauri/src/features/: mod.rs
src-tauri/src/fixer/: auto_fixer.rs  mod.rs
src-tauri/src/governance/: commands.rs  (+4 more)
src-tauri/tests/: activity_log_tests.rs  api_config_tests.rs  cache_manager_tests.rs  chains_test.rs  collab_tests.rs  data_pipeline_tests.rs  defi_tests.rs  email_tests.rs  holder_analysis_test.rs  journal_tests.rs  launch_predictor_tests.rs  multi_wallet_test.rs  multisig_tests.rs  performance_tests.rs  risk_scoring_test.rs  safety_tests.rs  sentiment_anomaly_tests.rs  social_analysis_tests.rs  social_data_tests.rs  tax_tests.rs  test_keystore.rs  trading_tests.rs  twitter_tests.rs  voice_tests.rs  websocket_manager_tests.rs
(+454 files in other folders)
