[package]
name = "app"
version = "0.1.0"
description = "Eclipse Market Pro"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
log = "0.4"

# Solana
solana-sdk = { version = "1.17.0", default-features = false, features = ["program"] }
solana-client = "1.17.0"
anchor-lang = "0.29.0"

# Hardware Wallet Support (simulated)
bs58 = "0.5.0"
sha2 = "0.10.8"

# Database  
# NOTE: Using 0.6 to avoid zeroize version conflicts with solana-client (0.7 pulls in mysql backend which needs zeroize 1.5+)
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-native-tls", "sqlite", "macros", "chrono", "uuid", "migrate", "offline"] }

# Security
keyring = "2.0.0"
argon2 = "0.5.3"
aes-gcm = { version = "0.10.3", features = ["aes"] }
rand_core = "0.6.4"
jsonwebtoken = "9.3.1"
qrcodegen = "1.8.0"
data-encoding = "2.4.0"
hmac = "0.12.1"
sha1 = "0.10.6"
zeroize = "1.3.0"

# Networking
reqwest = { version = "0.11.27", features = ["json"] }
tokio-tungstenite = "0.21.0"
futures-util = "0.3.28"
url = "2.4.1"
rmp-serde = "1.1.2"

# Email
lettre = { version = "0.10", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Utilities
chrono = { version = "0.4.35", features = ["serde"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dirs = "5.0.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
base64 = "0.21.7"
bincode = "1.3.3"
cron = "0.12.0"
async-trait = "0.1.82"
hex = "0.4.3"
toml = "0.8"

# Performance optimization
crossbeam = "0.8.4"
parking_lot = "0.12.1"
bytes = "1.5.0"
sysinfo = { version = "0.29", default-features = false }

# Compression
zstd = "0.13.0"

tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-notification = "2.0"
auto-launch = "0.5.0"

rand = "0.9.2"
lazy_static = "1.5.0"
regex = "1.10.4"
serde_urlencoded = "0.7.1"
thiserror = "2.0.17"
serde_with = "3.15.1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Devices_Input", "Security_Credentials_UI", "Foundation", "Storage_Streams"] }

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3.5"
core-foundation = "0.10"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.dev]
debug = false
split-debuginfo = "packed"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dev-dependencies]
httpmock = "0.7.0"
criterion = { version = "0.5.1", features = ["async_tokio"] }
tempfile = "3.10"

[[bench]]
name = "price_engine_bench"
harness = false
